# shakti

./: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  COPYING.README  README.md  build-shakti.sh  build.sh
cmake/: DO_ShaktiConfig.cmake.in  FindDO_Shakti.cmake  convenience_macros.cmake  do_convenience_macros.cmake  shakti_configure_cxx_compiler.cmake  shakti_configure_nvcc_compiler.cmake  shakti_installation_settings.cmake  shakti_macros.cmake  shakti_version.cmake  shakti_version.cmake.in
examples/: CMakeLists.txt  ImageProcessing.hpp  cuda_test.cpp  image_processing.hpp  image_processing_test.cpp  toy_test_cuda.cu
examples/ImageProcessing/: CMakeLists.txt
examples/Quicktime/: CMakeLists.txt
examples/Segmentation/: CMakeLists.txt  segmentation_example.cpp
examples/image_processing/: CMakeLists.txt  ImageProcessing.hpp  dense_sift_example.cpp  image_processing.cu  image_processing.hpp  image_processing_example.cpp  image_processing_test.cpp
examples/python/: laplacian_example.py
examples/quicktime/: CMakeLists.txt  quicktime_read_example.cpp
python/: CMakeLists.txt
python/do/shakti/: CMakeLists.txt  ImageProcessing.cpp  ImageProcessing.hpp  Numpy.hpp  __init__.py  pyshakti.cpp
python/do/shakti/test/: CMakeLists.txt  test_imageprocessing.py
src/: CMakeLists.txt
src/DO/: CMakeLists.txt
src/DO/Shakti/: Backend.hpp  CMakeLists.txt  Defines.hpp  ImageProcessing.hpp  MultiArray.hpp  Segmentation.hpp  Utilities.hpp
src/DO/Shakti/Backend/: OpenCL.hpp
src/DO/Shakti/Backend/OpenCL/: CMakeLists.txt  Core.hpp
src/DO/Shakti/Backend/OpenCL/Core/: CMakeLists.txt  CommandQueue.hpp  Context.hpp  Device.hpp  DeviceBuffer.hpp  DeviceImage.hpp  Error.hpp  Kernel.hpp  Platform.hpp  Program.hpp
src/DO/Shakti/Backend/OpenCL/GL/: CMakeLists.txt  PixelBuffer.hpp  Texture.hpp
src/DO/Shakti/ImageProcessing/: CMakeLists.txt  Differential.cu  Differential.hpp  Histogram.cu  Histogram.hpp  ImagePyramid.hpp  LinearFiltering.cu  LinearFiltering.hpp  SIFT.cu  SIFT.hpp
src/DO/Shakti/ImageProcessing/Cuda/: Convolution.hpp  Differential.hpp  Globals.hpp
src/DO/Shakti/ImageProcessing/Kernels/: Convolution.hpp  Differential.hpp  Globals.hpp
src/DO/Shakti/MultiArray/: CMakeLists.txt  Grid.hpp  Matrix.hpp  MultiArray.cu  MultiArray.hpp  MultiArrayView.hpp  Offset.hpp  PinnedAllocator.hpp  Strides.hpp  TextureArray.hpp
src/DO/Shakti/MultiArray/Cuda/: Array.hpp
src/DO/Shakti/Python/: CMakeLists.txt  ImageProcessing.cpp  Numpy.hpp  Shakti.cpp
src/DO/Shakti/Segmentation/: CMakeLists.txt  SuperPixel.cu  SuperPixel.hpp
src/DO/Shakti/Utilities/: CMakeLists.txt  DeviceInfo.cpp  DeviceInfo.hpp  ErrorCheck.hpp  Timer.cpp  Timer.hpp  Utilities.hpp
test/: CMakeLists.txt
test/ImageProcessing/: CMakeLists.txt  test_imageprocessing_dense_sift.cpp  test_imageprocessing_differential.cpp  test_imageprocessing_histogram.cpp  test_imageprocessing_linear_filtering.cpp
test/MultiArray/: CMakeLists.txt  test_cuda_array.cu  test_matrix.cu  test_multiarray.cu  test_texturearray.cu
test/Segmentation/: CMakeLists.txt  test_superpixel.cu
